--- a/src/main/resources/templates/views/user/myPage.html
+++ b/src/main/resources/templates/views/user/myPage.html
@@ -6,7 +6,9 @@
 				<h2>My Activities</h2>
 				<div class="ptag-container mb-2">
 					<span>Today is the</span> 
-					<span>125th</span>
+					<span id="accuDate" class="text-primary"><b>
+					125th
+					</b></span>
 					<span>day since you subscribed to iFrame2.0.</span>
 				</div>
 			</div>
@@ -217,7 +219,7 @@
 						opacity: 1,
 					},
 					series: [{
-						name: "Profits",
+						name: "count",
 						data: [37, 35, 44, 28, 36, 24, 65, 31, 37, 39, 62, 51, 35, 41, 35, 27, 93, 53, 61, 27, 54, 43, 19, 46, 39, 62, 51, 35, 41, 67]
 					}],
 					tooltip: {
@@ -246,7 +248,7 @@
 					labels: [
 						'2020-06-21', '2020-06-22', '2020-06-23', '2020-06-24', '2020-06-25', '2020-06-26', '2020-06-27', '2020-06-28', '2020-06-29', '2020-06-30', '2020-07-01', '2020-07-02', '2020-07-03', '2020-07-04', '2020-07-05', '2020-07-06', '2020-07-07', '2020-07-08', '2020-07-09', '2020-07-10', '2020-07-11', '2020-07-12', '2020-07-13', '2020-07-14', '2020-07-15', '2020-07-16', '2020-07-17', '2020-07-18', '2020-07-19', '2020-07-20'
 					],
-					colors: [tabler.getColor("seconday")],
+					colors: [tabler.getColor("secondary")],
 					legend: {
 						show: false,
 					},
@@ -283,7 +285,7 @@
 						opacity: 1,
 					},
 					series: [{
-						name: "Profits",
+						name: "count",
 						data: [37, 35, 44, 28, 36, 24, 65, 31, 37, 39, 62, 51, 35, 41, 35, 27, 93, 53, 61, 27, 54, 43, 19, 46, 39, 62, 51, 35, 41, 67]
 					}],
 					tooltip: {
@@ -312,7 +314,7 @@
 					labels: [
 						'2020-06-21', '2020-06-22', '2020-06-23', '2020-06-24', '2020-06-25', '2020-06-26', '2020-06-27', '2020-06-28', '2020-06-29', '2020-06-30', '2020-07-01', '2020-07-02', '2020-07-03', '2020-07-04', '2020-07-05', '2020-07-06', '2020-07-07', '2020-07-08', '2020-07-09', '2020-07-10', '2020-07-11', '2020-07-12', '2020-07-13', '2020-07-14', '2020-07-15', '2020-07-16', '2020-07-17', '2020-07-18', '2020-07-19', '2020-07-20'
 					],
-					colors: [tabler.getColor("seconday")],
+					colors: [tabler.getColor("secondary")],
 					legend: {
 						show: false,
 					},
@@ -348,7 +350,7 @@
 						opacity: 1,
 					},
 					series: [{
-						name: "Profits",
+						name: "count",
 						data: [17, 35, 23, 28, 8, 24, 65, 31, 62, 39, 62, 51, 35, 41, 35, 27, 113, 53, 61, 27, 31, 13, 19, 46, 12, 62, 3, 35, 41, 67]
 					}],
 					tooltip: {
@@ -377,7 +379,7 @@
 					labels: [
 						'2020-06-21', '2020-06-22', '2020-06-23', '2020-06-24', '2020-06-25', '2020-06-26', '2020-06-27', '2020-06-28', '2020-06-29', '2020-06-30', '2020-07-01', '2020-07-02', '2020-07-03', '2020-07-04', '2020-07-05', '2020-07-06', '2020-07-07', '2020-07-08', '2020-07-09', '2020-07-10', '2020-07-11', '2020-07-12', '2020-07-13', '2020-07-14', '2020-07-15', '2020-07-16', '2020-07-17', '2020-07-18', '2020-07-19', '2020-07-20'
 					],
-					colors: [tabler.getColor("seconday")],
+					colors: [tabler.getColor("secondary")],
 					legend: {
 						show: false,
 					},
