--- a/src/main/resources/templates/views/biz/jnl/BIZJNL002M0.html
+++ b/src/main/resources/templates/views/biz/jnl/BIZJNL002M0.html
@@ -426,7 +426,7 @@
 			
 			// 선택된 cell이 없을 경우
 			if (!activeCell) {
-				alert("Please select a cell to edit the data.");
+				alert('Click the row you want to modify, and then click the "Edit" button');
 			return;
 			}
 			
