시분초 제거

--- a/src/main/resources/templates/views/wrk/bat/WRKBAT002M0.html
+++ b/src/main/resources/templates/views/wrk/bat/WRKBAT002M0.html
@@ -133,7 +133,7 @@
 		var dataView;
 		var data;
 		var unqId = "batProgId";
-		var xcpt_cols = ["regUsrid", "regDt"];
+		var xcpt_cols = ["frstRegEmpNo", "frstRegDtm"];
 		var check_cols = [unqId, "batProgNm"];
 		
 		// CheckBox Selector
