그리드 스타일 수정

--- a/src/main/resources/templates/views/biz/fst/BIZFST002M0.html
+++ b/src/main/resources/templates/views/biz/fst/BIZFST002M0.html
@@ -63,8 +63,7 @@
 					</div>
 				</div>
 				<div style="padding-top: 2em"></div>
-				<div id="divMyGrid">
-					<table align="center" class="table"></table>
+				<div class="card card-md" id="divMyGrid">
 				</div>
 			</div>
 			<div class="popupDataForm">
@@ -184,18 +183,18 @@
 		var	columns	=	[
 				{id: "atitCd", 			name: "Account Title", 			field: "atitCd",			width: 240,	sortable: true,	editor: Slick.Editors.Text, 	formatter: TreeArchFormatter,	validator: createValidator, 			headerCssClass: "slick-header-columns", 			cssClass: "slick-column-left" 	}
 			,	{id: "atitNm", 			name: "Account Name", 			field: "atitNm", 			width: 400,	sortable: true,	editor: Slick.Editors.Text, 	validator: createValidator, 			headerCssClass: "slick-header-columns", 			cssClass: "slick-column-left" 		}
-			,	{id: "basAmt", 			name: "Basis of Term", 			field: "basAmt", 			width: 100,	sortable: true,	editor: Slick.Editors.Text, 	validator: createValidator, 			formatter: currencyFormatter, 			headerCssClass: "slick-header-columns", 			cssClass: "slick-column-right" 		}
+			,	{id: "basAmt", 			name: "Basis of Term", 			field: "basAmt", 			width: 160,	sortable: true,	editor: Slick.Editors.Text, 	validator: createValidator, 			formatter: currencyFormatter, 			headerCssClass: "slick-header-columns", 			cssClass: "slick-column-right" 		}
 			,	{id: "drAmt", 			name: "Dr", 					field: "drAmt", 			width: 150,	sortable: true,	editor: Slick.Editors.Text, 	validator: createValidator, 			formatter: currencyFormatter, 			headerCssClass: "slick-header-columns", 			cssClass: "slick-column-right" 		}
 			,	{id: "crAmt", 			name: "Cr", 					field: "crAmt", 			width: 150,	sortable: true,	editor: Slick.Editors.Text, 	validator: createValidator, 			formatter: currencyFormatter, 			headerCssClass: "slick-header-columns", 			cssClass: "slick-column-right" 		}
 			,	{id: "entmAmt", 		name: "End of Term", 			field: "entmAmt", 			width: 150,	sortable: true,	editor: Slick.Editors.Text, 	validator: createValidator, 			headerCssClass: "slick-header-columns", 			formatter: currencyFormatter, 			headerCssClass: "slick-header-columns", 			cssClass: "slick-column-right" 		}
-			,	{id: "frstRegEmpNo", 	name: "Registrant", 			field: "frstRegEmpNo", 		width: 100,	sortable: true,	editor: Slick.Editors.Text, 	headerCssClass: "slick-header-columns", 			cssClass: "slick-column-center" 		}
+			,	{id: "frstRegEmpNo", 	name: "Registrant", 			field: "frstRegEmpNo", 		width: 160,	sortable: true,	editor: Slick.Editors.Text, 	headerCssClass: "slick-header-columns", 			cssClass: "slick-column-center" 		}
 			,	{id: "frstRegDtm", 		name: "Registration Date", 		field: "frstRegDtm", 		width: 120,	sortable: true,	editor: Slick.Editors.Text, 	headerCssClass: "slick-header-columns", 			cssClass: "slick-column-center" 		}
 		];
 
 		var options = {
 			enableCellNavigation: true,
 			enableColumnReorder: false,
-			forceFitColumns: true,
+			forceFitColumns: false,
 			multiColumnSort: true,
 			numberedMultiColumnSort: true,
 			tristateMultiColumnSort: true,
